--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
                 <p>VietConnect combines an AI chatbot, multilingual agents and local resources to help foreign residents access medical care, safety services and administrative processes quickly and clearly.</p>
 
                 <div style = "display : flex; gap : 12px; margin-top : 22px;">
-                    <button  class = "main-button get-started" href = "{{url_for('chat_page')}}">Get Started - It's free</button>
+                    <button  class = "main-button get-started" href = "{{url_for('chat.chat_page')}}">Get Started - It's free</button>
                     <button  class = "main-button learn-more" href="404.html"  id="learnMore">Learn More</button>
                 </div>
 
