interaction with maps and find the shortest path

--- a/app/chat/templates/chat.html
+++ b/app/chat/templates/chat.html
@@ -59,7 +59,13 @@
 
         <!-- MAP -->
         <aside>
-          <div id="map"></div>
+          <div id="map">
+            <div class="transport-btns">
+                <button data-travel="driving" class="active">Driving</button>
+                <button data-travel="Motorcycling"> Motorcycling</button>
+                <button data-travel="walking"> Walking</button>
+            </div>
+          </div>
         </aside>
     </div>
 {% endblock %}
