complete login/signup

--- a/app/auth/templates/signup.html
+++ b/app/auth/templates/signup.html
@@ -242,6 +242,7 @@
       </footer>
     </div>
     
+  <script src="{{ url_for('auth.static', filename='scripts/common.js') }}"></script>
   <script src="{{ url_for('auth.static', filename='scripts/signup.js') }}"></script>
 
 </body>
