--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,13 @@
-{% extends "layout.html" %} {% block css %}
+{% extends "layout.html" %} 
+
+{% block css %}
 <link
   rel="stylesheet"
   href="{{ url_for('static', filename='css/index.css') }}"
 />
-{% endblock %} {% block content %}
+{% endblock %} 
+
+{% block content %}
 <main class="container">
   <section class="container-section">
     <div class="introduction">
@@ -165,6 +169,8 @@
     </div>
   </footer>
 </main>
-{% endblock %} {% block script %}
+{% endblock %} 
+
+{% block script %}
 <script src="{{ url_for('static', filename='script/index.js') }}"></script>
 {% endblock %}
