--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -36,7 +36,7 @@
                 <img src="{{ session.avatar }}" alt="User Avatar" class="avatar">
                 <div class="user-text">
                     <span class="greeting">Chào, <strong>{{ session.fullname }}</strong>!</span>
-                    <a href="{{ url_for('logout') }}" class="logout-link">Log out</a>
+                    <a href="{{ url_for('auth.logout') }}" class="logout-link">Log out</a>
                 </div>
             </div>
         {% endif %}
