--- a/app/auth/static/css/signin.css
+++ b/app/auth/static/css/signin.css
@@ -120,7 +120,7 @@ body {
     .divider:not(:empty)::after {
       margin-left: 0.75em;
     }
-
+z
     .oauth-btn {
         width: 100%;
         display: flex;
