--- a/app/chat/templates/chat.html
+++ b/app/chat/templates/chat.html
@@ -16,11 +16,13 @@
         <!-- HISTORY SIDEBAR -->
         <aside class="sidebar" aria-label="Conversations">
         <div class="top">
-            <h3>History</h3>
-            <div class="controls">
-            <button id="btnNew">New chat</button>
-            <button id="btnDeleteSelected" title="Delete Selected Conversation" >Delete</button>
-            <button id="hideBtn">Hide</button>
+            <div style = "display: flex; flex-direction: column; justify-content: center; align-items: center;">    
+                <h3>History</h3>
+                <div class="controls">
+                    <button id="btnNew">New chat</button>
+                    <button id="btnDeleteSelected" title="Delete Selected Conversation" ></button>
+                    <button id="hideBtn">Hide</button>
+                </div>
             </div>
         </div>
 
