--- a/app/chat/templates/chat.html
+++ b/app/chat/templates/chat.html
@@ -54,4 +54,6 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
     <script type = "module" src="{{ url_for('chat.static', filename='scripts/logic.js') }}"> </script>
+    <script type="module" src="{{ url_for('chat.static', filename='scripts/guide_manager.js') }}"></script>
+
 {% endblock %}
